--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "mellow",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "init-db": "node init-database.js"
+  },
   "dependencies": {
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
